Fix search bar on mobile

--- a/src/assets/less/components/header.less
+++ b/src/assets/less/components/header.less
@@ -257,7 +257,6 @@
     #search-bar{
         .flexbox();
         .flx-shrink(0);
-        .alignitems(end);
         .justify-content(center);
         height: 3rem;
         input{
@@ -350,10 +349,7 @@
     }
     .i-search{
         .border-radius(1.5rem 0 0 1.5rem);
-        @media(max-width: 1024px){
-            .border-radius(2rem 0 0 2rem);
-        }
-         background-color: @clr-background;
+            background-color: @clr-background;
 
     }
     .empty{
